--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ad3cb3f1",
    "metadata": {},
    "outputs": [],
@@ -32,15 +32,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "46171d62",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# Replace the placeholders with the actual file paths\n",
-    "crop_production_path = '/path/to/India Agriculture Crop Production.csv'\n",
-    "rainfall_path = '/path/to/Rainfall_Data.csv'\n",
+    "crop_production_path = '/Users/anishak98/Desktop/Project-4/India Agriculture Crop Production.csv'\n",
+    "rainfall_path = '/Users/anishak98/Desktop/Project-4/Rainfall_Data_LL.csv'\n",
     "\n",
     "crop_production_df = pd.read_csv(crop_production_path)\n",
     "rainfall_df = pd.read_csv(rainfall_path)\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "05b4c249",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
    "source": [
     "\n",
     "# Aggregate rainfall data by year and state\n",
-    "# Placeholder for actual aggregation code\n",
+    "\n",
     "    "
    ]
   },
@@ -100,8 +100,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "# Placeholder for merging datasets\n",
-    "# This assumes state names have been standardized across both datasets\n",
+    "\n",
     "    "
    ]
   },
@@ -121,7 +120,6 @@
    "outputs": [],
    "source": [
     "\n",
-    "# Placeholder for EDA code\n",
     "    "
    ]
   },
@@ -141,12 +139,30 @@
    "outputs": [],
    "source": [
     "\n",
-    "# Placeholder for feature engineering and model preparation code\n",
+    "\n",
     "    "
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
